--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,11 @@
 		"display-name": "Delete Pm's",
 		"branch-alias": {
 			"dev-master": "1.0-dev"
+		},
+		"version-check": {
+			"host": "forumhulp.com",
+			"directory": "/ext",
+			"filename": "index.php?id=25"
 		}
 	}
 }
