--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"type": "phpbb-extension",
 	"description": "An extension deleting pm's after a configurable timespan by cron",
 	"homepage": "http://forumhulp.com",
-	"version": "3.1.0-dev",
+	"version": "3.1.0",
 	"keywords": ["forumhulp", "phpbb", "extension", "pm", "pb"],
 	"license": "GPL-2.0",
 	"authors": [
@@ -20,9 +20,9 @@
 	},
 	"extra": {
 		"display-name": "Delete Pm's",
-		"branch-alias": {
-			"dev-master": "1.0-dev"
-		},
+		"soft-require": {
+           "phpbb/phpbb": "3.1.*@dev"
+        },
 		"version-check": {
 			"host": "forumhulp.com",
 			"directory": "/ext",
