--- a/config/services.yml
+++ b/config/services.yml
@@ -7,7 +7,7 @@ services:
             - @config
             - @dbal.conn
         calls:
-            - [set_name, [cron.task.core.deletee_pms]]
+            - [set_name, [cron.task.core.delete_pms]]
         tags:
             - { name: cron.task }
     forumhulp.delete_pms.listener:
