--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,13 @@
 	"type": "phpbb-extension",
 	"description": "An extension deleting pm's after a configurable timespan by cron",
 	"homepage": "http://forumhulp.com",
-	"version": "3.1.0",
+	"version": "3.1.0.RC4",
 	"keywords": ["forumhulp", "phpbb", "extension", "pm", "pb"],
 	"license": "GPL-2.0",
 	"authors": [
 		{
 			"name": "John Peskens",
+			"homepage": "http://forumhulp.com",
 			"email": "info@forumhulp.com",
 			"role": "Developer"
 		}
