--- a/config/services.yml
+++ b/config/services.yml
@@ -1,5 +1,5 @@
 services:
-    cron.task.core.delete_pms:
+    forumhulp.delete_pms:
         class: forumhulp\deletepms\cron\task\core\delete_pms
         arguments:
             - %core.root_path%
@@ -7,7 +7,7 @@ services:
             - @config
             - @dbal.conn
         calls:
-            - [set_name, [cron.task.core.delete_pms]]
+            - [set_name, [forumhulp.delete_pms]]
         tags:
             - { name: cron.task }
     forumhulp.delete_pms.listener:
