--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
 		"version-check": {
 			"host": "forumhulp.com",
 			"directory": "/versioncheck",
-			"filename": "deletepms"
+			"filename": "delete-pms"
 		}
 	}
 }
